<resources>
    <string name="app_name">PinPoint</string>
    <string name="current_location">Current Location</string>
    <string name="locations">Locations</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">Favourite</string>
    <string name="favourited">Favourited</string>
    <string name="settings">Settings</string>
    <string name="preferred_unit_type">Preferred Unit Type</string>
    <string name="preferred_landmark">Preferred Landmark</string>
    <string name="preferred_directions_mode">Transportation Mode</string>
    <string name="update_settings">Update Settings</string>
    <string name="location_name">Location name</string>

    <string-array name="unit_types">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="preferred_landmark">
        <item>Natural</item>
        <item>Purpose built/Man-made</item>
        <item>Sport</item>
        <item>Events</item>
    </string-array>

    <string-array name="preferred_transport_mode">
        <item>DRIVING</item>
        <item>WALKING</item>
        <item>BICYCLING</item>
        <item>TRANSIT</item>
    </string-array>

    <!--<integer-array name="preferred_radius">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
    </integer-array>-->

    <!--    Account strings-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--PASSWORD VALIDATION ERROR MESSAGES-->
    <string name="password_numeric_error">Password must have a minimum of 1 numeric character [0\-9]</string>
    <string name="password_lowercase_error">Password must have a minimum of 1 lowercase character [a\-z]</string>
    <string name="password_uppercase_error">Password must have a minimum of 1 uppercase character [A\-Z]</string>
    <string name="password_special_char_error">password must have a minimum of 1 special character[@#$%^&amp;+=]</string>
    <string name="password_length_error">password must have a min. of 6 characters</string>
    <!--EMAIL VALIDATION ERROR MESSAGES-->
    <string name="email_required_error">Email is required.</string>
    <string name="password_required_error">Password is required.</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="marker_icon">marker icon</string>
    <string name="globe_icon">globe icon for website</string>
    <string name="rating_text">Rating: %1$.2f/5</string>
    <string name="distance_text">Distance: %1$s</string>
    <string name="duration_text">Duration: %1$s</string>
    <string name="contact_number_text">Contact Number: %1$s</string>
    <string name="hours">Hours: %1$s · %2$s - %3$s</string>
    <string name="hours_unavailable">Hours: Unavailable</string>
    <string name="preferred_search_radius">Preferred Search Radius (meters)</string>
</resources>