<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:elevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tvPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/text_black"
            android:textSize="@dimen/subheading_text_size" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/place_property_margin">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/marker_icon"
                android:src="@drawable/ic_location" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPlaceAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/address"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/tvPlaceAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPlaceAddressTitle"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/address"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/place_property_margin">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/marker_icon"
                android:src="@drawable/ic_phone" />
            <TextView
                android:id="@+id/tvContactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/contact_number_text"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/place_property_margin">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_star_rate"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/rating_text"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/place_property_margin">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/marker_icon"
                android:src="@drawable/ic_time" />
            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/hours"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>