<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/loginLayout">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pinpoint_logo"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/logo_vertical_margin1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/login_title_size"
        android:textColor="@color/text_black"
        android:layout_marginStart="@dimen/credentials_margin_horizontal"
        android:layout_marginTop="@dimen/credentials_margin_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:textColorHint="@color/placeholder_grey"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/text_black"
        app:errorTextColor="@color/error_red"
        app:boxStrokeErrorColor="@color/error_red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:textColorHint="@color/placeholder_grey"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/text_black"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_black"
        app:errorTextColor="@color/error_red"
        app:boxStrokeErrorColor="@color/error_red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:layout_height="@dimen/login_reg_button_height"
        android:textAllCaps="false"
        android:background="@drawable/main_button_style"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/button_text_size"/>
    <TextView
        android:id="@+id/tvRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_prompt"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/subheading_text_size"
        android:textColor="@color/grey"/>
</LinearLayout>