<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SettingsFragment"
    android:orientation="vertical"
    android:id="@+id/settingLayout">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:hint="@string/preferred_unit_type"
        android:textColorHint="@color/placeholder_grey"
        app:startIconDrawable="@drawable/ic_ruler"
        app:startIconTint="@color/text_black"
        app:errorTextColor="@color/error_red"
        app:boxStrokeErrorColor="@color/error_red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/tvPreferredUnitTypeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@null"
                android:inputType="none|textNoSuggestions"
                android:cursorVisible="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:hint="@string/preferred_landmark"
        android:textColorHint="@color/placeholder_grey"
        app:startIconDrawable="@drawable/ic_location"
        app:startIconTint="@color/text_black"
        app:errorTextColor="@color/error_red"
        app:boxStrokeErrorColor="@color/error_red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/tvPreferredLandMarkList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@null"
            android:inputType="none|textNoSuggestions"
            android:cursorVisible="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdateSettings"
        android:text="@string/update_settings"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/credentials_margin_horizontal"
        android:layout_marginVertical="@dimen/credentials_margin_vertical1"
        android:layout_height="@dimen/login_reg_button_height"
        android:textAllCaps="false"
        android:background="@drawable/main_button_style"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/button_text_size"/>
</LinearLayout>